<resources>
    <string name="app_name">Guardian</string>
    <string name="facebook_app_id">179926714009370</string>
    <string name="twitter_provider">twitter.com</string>

    <string name="name">Nome</string>
    <string name="email">Email</string>
    <string name="phone">Telefone (opcional)</string>
    <string name="password">Senha</string>
    <string name="forgot_password">Esqueci a senha</string>
    <string name="current_password">Senha atual</string>
    <string name="new_password">Nova senha</string>
    <string name="change_password">Mudar Senha</string>
    <string name="enter">Entrar</string>
    <string name="register">Cadastrar</string>
    <string name="or_socials_login">- ou entre com -</string>
    <string name="save">Salvar</string>
    <string name="retry">Novamente</string>
    <string name="allow_location">Permitir minha localização</string>
    <string name="allow_contacts">Permitir ver meus contatos</string>

    <string name="password_recovery">Recuperar a senha</string>
    <string name="type_your_email">Digite seu email\nEnviaremos um código de verificação</string>
    <string name="validation">Validação</string>
    <string name="type_your_code">Digite o código que enviamos para você</string>
    <string name="send">Enviar</string>
    <string name="did_not_get_code">Não recebou o código?</string>
    <string name="send_again">Enviar novamente</string>
    <string name="type_your_password">Digite sua senha</string>
    <string name="re_auth_dialog_text">Para editar seu email ou senha é necessário digitar sua senha atual</string>

    // profile
    <string name="edit_profile">Editar perfil</string>
    <string name="my_guardians">Meus Guardians</string>
    <string name="settings">Configuração</string>
    <string name="notifications">Notificações</string>
    <string name="leave">Sair</string>

    // menu
    <string name="menu">Menu</string>
    <string name="tools">Ferramentas</string>
    <string name="messages">Mensagens</string>
    <string name="location">Localização</string>
    <string name="search">Pesquisar</string>
    <string name="search_hint">Pesquisar…</string>
    <string name="my_profile">Meu perfil</string>

    // notifications
    <string name="recent">Recente</string>
    <string name="historic">Histórico</string>

    // messages
    <string name="app">App</string>
    <string name="Sms">Sms</string>
    <string name="add_contact_as_guardian">Adicionar contato como Guardian.</string>
    <string name="add_guardians">Adicionar Guardian.</string>
    <string name="add_contact">Adicionar contato.</string>
    <string name="contacts">Contatos</string>

    // chat
    <string name="type_message">Digite uma mensagem</string>

    // place holders
    <string name="notification_placeholder">Você não possui\nnenhuma notificação</string>
    <string name="contacts_placeholder">Você não possui contatos</string>
    <string name="no_contacts_found">Nenhum usuário encontrado</string>

    // alert dialog
    <string name="add_image">Adicionar imagem</string>
    <string name="camera">Camera</string>
    <string name="gallery">Galeria</string>

    // contact dialog
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="guardian_added">Guardian adicionado</string>
    <string name="contact_added">Contato adicionado</string>
    <string name="contact_already_added">Contato já adicionado</string>
    <string name="add_as_guardian">Deseja adicionar %s como Guadian?</string>
    <string name="add_as_contact">Deseja adicionar %s como contato?</string>

    // permissions
    <string name="permission_read_contacts_granted">Permissão para ler os contatos garantida</string>
    <string name="permission_read_contacts_denied">Permissão para ler os contatos negada</string>
    <string name="permission_fine_location_granted">Permissão para localização garantida</string>
    <string name="permission_fine_location_denied">Permissão para localização negada</string>

    // errors
    <string name="empty_field">Campo vazio</string>
</resources>