<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="none">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/guardians"
            android:icon="@drawable/ic_baseline_admin_panel_settings_24"
            android:title="@string/my_guardians" />

        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />

    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="none">

        <item
            android:id="@+id/leave"
            android:icon="@drawable/logout"
            android:title="@string/leave"/>
    </group>

</menu>