<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="me.brisson.guardian.ui.activities.forgotpassword.ForgotPasswordViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical"
        tools:context=".ui.activities.forgotpassword.ForgotPasswordActivity">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:tint="@color/white"/>

        <LinearLayout
            android:id="@+id/recoverPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_recovery"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:fontFamily="@font/roboto_condensed_regular"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_your_email"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_condensed_light"
                android:textAlignment="center"
                android:layout_marginTop="5dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_marginTop="40dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_condensed_regular"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/sendButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/rally_purple"
                android:fontFamily="@font/roboto_condensed_bold"
                android:paddingHorizontal="50dp"
                android:paddingVertical="12dp"
                android:text="@string/send"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/validationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/validation"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:fontFamily="@font/roboto_condensed_regular"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_your_code"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_condensed_light"
                android:textAlignment="center"
                android:layout_marginTop="5dp"/>

            <com.raycoarana.codeinputview.CodeInputView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                app:underline_selected_color="@color/rally_purple_50"
                app:input_type="numeric"
                app:gravity="center"
                app:code_text_color="@color/white"
                app:length_of_code="5"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/did_not_get_code"
                    android:fontFamily="@font/roboto_condensed_regular"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send_again"
                    android:layout_marginStart="3dp"
                    android:textColor="@color/rally_purple"
                    android:fontFamily="@font/roboto_condensed_regular"/>

            </LinearLayout>

        </LinearLayout>




    </LinearLayout>
</layout>
