<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="me.brisson.guardian.ui.activities.myguardians.MyGuardiansViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".ui.activities.myguardians.MyGuardiansActivity">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/topAppBar"
                    style="@style/Widget.MaterialComponents.Toolbar.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:paddingHorizontal="10dp"
                    app:layout_collapseMode="pin"
                    app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                    app:title="@string/my_guardians" />

            </com.google.android.material.appbar.AppBarLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/appMessagesTab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/smsMessagesTab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Sms" />

            </com.google.android.material.tabs.TabLayout>

            <FrameLayout
                android:id="@+id/messagesContainer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>


        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
