<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="me.brisson.guardian.ui.activities.firstscreen.FirstScreenViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/appLogoImageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:src="@color/color_background"
                app:civ_border_width="0.8dp"
                app:civ_border_color="@color/rally_purple"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"/>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/enterTab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register" />

            </com.google.android.material.tabs.TabLayout>

            <FrameLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="30dp"
                android:fontFamily="@font/roboto_condensed_regular"
                android:text="@string/or_socials_login" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:background="@drawable/bg_facebook_rounded"
                    android:padding="15dp"
                    android:src="@drawable/icon_facebook"/>

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="30dp"
                    android:background="@drawable/bg_google_rounded"
                    android:padding="15dp"
                    android:src="@drawable/icon_google" />

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:background="@drawable/bg_twitter_rounded"
                    android:padding="15dp"
                    android:src="@drawable/icon_twitter" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</layout>
